Update form styles

--- a/libs/jade/fields-checkbox.jade
+++ b/libs/jade/fields-checkbox.jade
@@ -25,10 +25,10 @@ block content
 							| Yes
 							div.conditional--content
 								fieldset
-									label.checkbox.checkbox--block
+									label.checkbox.radio--conditional
 										input(name="checkbox", type="checkbox")
 										| Option 1
-									label.checkbox.checkbox--block
+									label.checkbox.radio--conditional
 										input(name="checkbox", type="checkbox")
 										| Option 2
 						label.radio.radio--conditional
