--- a/libs/modules/notice.less
+++ b/libs/modules/notice.less
@@ -2,6 +2,8 @@
  * NOTICE
  *
  * Based on cookie monster
+ *
+ * 
  */
 
 .notice {
@@ -13,10 +15,6 @@
     z-index: 10000;
     @media screen and (max-width: @screen-xs-max) {
         font-size: 14px;
-    }
-    display: none;
-    .ie8 & {
-        display: block;
     }
 }
 
