--- a/libs/jade/notice.jade
+++ b/libs/jade/notice.jade
@@ -29,6 +29,6 @@ block content
 					| 	&lt;/div&gt;
 					| &lt;/div&gt;
 
-	.notice(style="display:block;")
+	.notice
 		.notice__content
 			p We no longer support Internet Explorer 8. To avoid problems viewing this website, please consider upgrading to #[a.a-external-link(href="#") Google Chrome].
