Update last page details

--- a/libs/jade/post-tool-4.jade
+++ b/libs/jade/post-tool-4.jade
@@ -18,7 +18,24 @@ block content
 			h2 Your emails
 			.callout--confirmation Your emails to Royal Mail, Direct Marketing Association and Mailing Preference Service have been sent.
 			p You’ll start to see a difference in the amount of junk mail you receive within the next 4 weeks.
+
 			h2 Your letter for your electoral registration office
-			p Your local electoral registration office is the #[a.a-external-link London Borough of Bromley]. Post or email them your letter as an attachment to be taken off the ‘open register’.
-			p
-				a.btn-secondary.save-button-icon Download your letter
+			p Your local electoral registration office is listed below. You will need to post or email them your letter as an attachment to be taken off the ‘open register’.
+
+			p It is worth checking on their website first to see how they prefer to accept this information.
+
+			h3 Contact Luton Borough Council
+
+			p#authority_url Visit the #[a(href="http://www.luton.gov.uk/Council_government_and_democracy/Local-democracy/electoral_registration/Pages/Electoral-registration.aspx" rel="external" id="url") Luton Borough Council website]
+			p#authority_email Email: #[a(href="mailto:electoral_services@luton.gov.uk") electoral_services@luton.gov.uk]
+			p#authority_phone Phone: 01582 510380
+			p#authority_address
+			| Luton Borough Council
+			br
+			| Town Hall
+			br
+			| Luton
+			p#authority_postcode LU1 2BQ
+
+
+			a.btn-secondary.save-button-icon Download your letter
