Update browser notice example

--- a/libs/template/template.jade
+++ b/libs/template/template.jade
@@ -271,9 +271,10 @@ html.no-js
 							br
 							| Registered office: Citizens Advice, 3rd Floor North, 200 Aldersgate, London, EC1A 4HD
 
-		.notice
+		// Code changed, not using here as implimented through cms
+		//.notice
 			.notice__content
-				p We no longer support Internet Explorer 8. To avoid problems viewing this website, please consider upgrading to #[a.a-external-link(href="https://www.google.co.uk/chrome") Google Chrome].
+				p We no longer support Internet Explorer 8. To avoid problems viewing this website, please consider #[a.a-external-link(href="http://browsehappy.com/") upgrading your browser].
 
 		<!--[if IE 8]></div><![endif]-->
 		script(src="js/vendor/jquery-1.11.3.min.js")
