Add letter style

--- a/libs/base/variables.less
+++ b/libs/base/variables.less
@@ -176,6 +176,7 @@
 
 @inner-shadow:  inset 0 10px 10px -13px, inset 0 -10px 10px -13px;
 @outer-shadow: 0 1px 3px 0 @gray-8, 0 0 0 1px @gray-8;
+@sample-shadow: 2px 2px 2px @gray-1;
 
 /***************************************************************************
  * FORMS
