Initial changes self form

--- a/libs/jade/witness-self-form-1.jade
+++ b/libs/jade/witness-self-form-1.jade
@@ -15,12 +15,14 @@ block breadcrumbs
 block content
 	.articleContent
 		div
-			p The Witness Service supports witnesses who are giving evidence in criminal courts in England or Wales. Whether you are contacting us on behalf of a witness or you are a witness yourself, we can provide practical information and emotional support.
+			p Giving evidence as a witness can be daunting and the court process can be complicated and difficult to understand. The Citizens Advice Witness Service provides free and independent support for both prosecution and defence witnesses in every criminal court in England and Wales.
 
-			p Please use this form to get in touch.  We will reply within two working days, usually by phone, in a call that last 10 to 20 minutes.
+			p Whether you are are a witness or contacting us on behalf of a witness please use this form to get in touch.  
+
+			p We’ll reply within two working days, usually by phone.
 
 			fieldset
-				legend(for="radio") Please select one of the following options
+				legend(for="radio") Please select one of the following options:
 				label.radio.radio--block
 					input(checked, name="radio", type="radio", value="option1")
 					| I am a witness or I am making contact on behalf of a family member or friend who is a witness
