--- a/libs/jade/witness-self-form-complete.jade
+++ b/libs/jade/witness-self-form-complete.jade
@@ -17,19 +17,19 @@ block content
 		div
 			h2 Form submitted
 			.callout--confirmation 
-				p Your form has been submitted, our reference number, should you need to contact us is:
+				p Your form has been submitted. Our reference number, if you need to contact us, is
 				h2 1234567
 				p Would you like a copy of your submission?
-				button.btn-secondary.email-button-icon(type="button") Email
+				//button.btn-secondary.email-button-icon(type="button") Email
 				button.btn-secondary.print-button-icon(type="button") Print
 
 			.callout--related
 				h3 What happens next?
-				p Someone from the Witness Service will be in touch using the phone number or email below, please add them to your contacts so you know they are calling and so that the email doesn't go into your junk email folder.
+				p Someone from the Witness Service will call you from the phone number below, or by email if you have not provided a phone number. Please add our number to the contacts on your phone so you know it’s us calling.
 
-				p If you have any questions, you can also use these details to get in touch
+				p If you have any questions, you can also call us on this number.
+				h4 Phone number:
+				p 0300 33 21 000
 
-				h4 Witness Service call centre
-				p 020 123 4567
-				p #[a(href="#") witness@citizensadvice.org.uk]
+				p Find out more #[a(href="https://www.citizensadvice.org.uk/about-us/how-citizens-advice-works/citizens-advice-witness-service/about-the-citizens-advice-witness-service/") about the Witness Service] or get #[a(href="https://www.citizensadvice.org.uk/law-and-rights/legal-system/going-to-court-as-a-witness/") information about being a witness].
 				
