--- a/libs/jade/witness-form-3.jade
+++ b/libs/jade/witness-form-3.jade
@@ -19,15 +19,15 @@ block content
 
 			fieldset
 				label(for="standardField") First name
-				span.form-hint The witnesses first name
+				span.form-hint The witness’s first name
 				input(id="standardField" placeholder="" type="text")
 			
 			fieldset
 				label(for="standardField") Last name
-				span.form-hint The witnesses last name
+				span.form-hint The witness’s last name
 				input(id="standardField" placeholder="" type="text")
 
-			fieldset
+			//fieldset
 				legend(for="radio") Gender
 				span.form-hint As defined by the witness
 				label.radio.radio--block
@@ -43,10 +43,10 @@ block content
 			.form-group-date(style="overflow: auto;")
 				legend Date of birth 
 					span.optional (optional)
-				span.form-hint The witnesses date of birth
+				span.form-hint The witness's date of birth
 				fieldset
 					label(for="dob-day")
-						span.screenreader What is the witnesses date of birth? Date field,
+						span.screenreader What is the witness's date of birth? Date field,
 						| Day
 					input#dob-day(max="31", min="1", placeholder="DD", type="number")
 				fieldset
