--- a/libs/jade/witness-form-4.jade
+++ b/libs/jade/witness-form-4.jade
@@ -15,16 +15,16 @@ block breadcrumbs
 block content
 	.articleContent
 		div
-			h2 The Witness’s contact details
+			h2 The witness’s contact details
 			.callout--alert
-				p Please only provide contact information that we can use to contact the witness.
+				p Please only provide contact information that we can safely use to contact the witness.
 
 			fieldset
-				label(for="standardField") Preferred phone number
+				label(for="standardField") Phone number
 				input(id="standardField" placeholder="" type="text")
 
 			fieldset
-				legend(for="radio") Can the Witness Service leave a message if there is no answer?
+				legend(for="radio") Is it safe for us to leave a message if the witness doesn’t answer the phone?
 				span.form-hint If unsure leave as 'No'
 				label.radio.radio--inline
 					input(name="radio2", type="radio", value="option1")
@@ -36,6 +36,13 @@ block content
 			fieldset
 				label(for="standardField") Email address
 				input(id="standardField" placeholder="" type="text")
+
+			fieldset
+				label(for="exampleTextarea") Does the individual have communication needs and contact preferences?
+					span.optional (optional)
+				span.form-hint  Include the support of an interpreter or other language support (please give their name and role)
+				textarea#exampleTextarea(rows="3")
+
 
 			//h3 Witness's primary address
 			//fieldset
