--- a/libs/jade/witness-form-8.jade
+++ b/libs/jade/witness-form-8.jade
@@ -15,10 +15,35 @@ block breadcrumbs
 block content
 	.articleContent
 		div
-			h3 Special measures
-			label What special measures have been identified, applied for or granted?
+			h2 Special measures
 
 			fieldset
+				label(for="exampleTextarea") Which special measures have been granted? 
+					span.optional (optional)
+				span.form-hint  This includes screens, evidence in chief, Livelink, pre-recorded cross examination, closed court, removal of wigs and gowns, intermediary and aids to communication
+				textarea#exampleTextarea(rows="3")
+
+			fieldset
+				label(for="exampleTextarea") Which special measures have been applied for, but not yet granted? 
+					span.optional (optional)
+				span.form-hint  This includes screens, evidence in chief, Livelink, pre-recorded cross examination, closed court, removal of wigs and gowns, intermediary and aids to communication
+				textarea#exampleTextarea(rows="3")
+
+
+			fieldset
+				label(for="exampleTextarea") Which special measures have been identified, but not applied for? 
+					span.optional (optional)
+				span.form-hint  This includes screens, evidence in chief, Livelink, pre-recorded cross examination, closed court, removal of wigs and gowns, intermediary and aids to communication
+				textarea#exampleTextarea(rows="3")
+
+
+			a.btn-light.left-button-icon(href="witness-form-7.html") Back
+			a.btn.tick-button-icon(href="witness-form-complete.html") Submit
+
+
+
+			///label What special measures have been identified, applied for or granted?
+			//fieldset
 				label(for="exampleSelect1") Screen?
 				.dropdown
 					select#exampleSelect1
@@ -27,7 +52,7 @@ block content
 						option Applied for
 						option Granted
 
-			fieldset
+			//fieldset
 				label(for="exampleSelect2") Evidence in chief?
 				.dropdown
 					select#exampleSelect2
@@ -36,7 +61,7 @@ block content
 						option Applied for
 						option Granted
 
-			fieldset
+			//fieldset
 				label(for="exampleSelect3") Livelink?
 				.dropdown
 					select#exampleSelect3
@@ -45,7 +70,7 @@ block content
 						option Applied for
 						option Granted
 
-			fieldset
+			//fieldset
 				label(for="exampleSelect4") Pre-recorded cross examination?
 				.dropdown
 					select#exampleSelect4
@@ -54,7 +79,7 @@ block content
 						option Applied for
 						option Granted
 
-			fieldset
+			//fieldset
 				label(for="exampleSelect5") Closed court?
 				.dropdown
 					select#exampleSelect5
@@ -63,7 +88,7 @@ block content
 						option Applied for
 						option Granted
 
-			fieldset
+			//fieldset
 				label(for="exampleSelect6") Removal of wigs and gowns?
 				.dropdown
 					select#exampleSelect6
@@ -72,7 +97,7 @@ block content
 						option Applied for
 						option Granted
 
-			fieldset
+			//fieldset
 				label(for="exampleSelect7") Intermediary?
 				.dropdown
 					select#exampleSelect7
@@ -81,7 +106,7 @@ block content
 						option Applied for
 						option Granted
 
-			fieldset
+			//fieldset
 				label(for="exampleSelect8") Aids to communication?
 				.dropdown
 					select#exampleSelect8
@@ -107,6 +132,3 @@ block content
 					span.optional (optional)
 				span.form-hint Include the support of an interpreter or other language support (please give their name and role)
 				textarea#exampleTextarea(rows="3")
-
-			a.btn-light.left-button-icon(href="witness-form-7.html") Back
-			a.btn.tick-button-icon(href="witness-form-complete.html") Submit
