--- a/libs/jade/witness-form-4.jade
+++ b/libs/jade/witness-form-4.jade
@@ -15,54 +15,47 @@ block breadcrumbs
 block content
 	.articleContent
 		div
-			h2 The witness’s contact details
-			.callout--alert
-				p Please only provide contact information that we can safely use to contact the witness.
+			h2 Information about the person being referred
 
 			fieldset
-				label(for="standardField") Phone number
+				label(for="standardField") First name
+				span.form-hint The witness’s first name
+				input(id="standardField" placeholder="" type="text")
+			
+			fieldset
+				label(for="standardField") Last name
+				span.form-hint The witness’s last name
 				input(id="standardField" placeholder="" type="text")
 
-			fieldset
-				legend(for="radio") Is it safe for us to leave a message if the witness doesn’t answer the phone?
-				span.form-hint If unsure leave as 'No'
-				label.radio.radio--inline
-					input(name="radio2", type="radio", value="option1")
-					| Yes
-				label.radio.radio--inline
-					input(checked, name="radio2", type="radio", value="option2")
-					| No
-				
-			fieldset
-				label(for="standardField") Email address
-				input(id="standardField" placeholder="" type="text")
-
-			fieldset
-				label(for="exampleTextarea") Does the individual have communication needs and contact preferences?
-					span.optional (optional)
-				span.form-hint  Include the support of an interpreter or other language support (please give their name and role)
-				textarea#exampleTextarea(rows="3")
-
-
-			//h3 Witness's primary address
 			//fieldset
-				label(for="standardField") Preferred phone number
-				input(id="standardField" placeholder="" type="text")
-			//fieldset
-				label.radio.radio--inline
-					input(checked, name="radio", type="radio", value="option1")
-					| Lookup address
-				label.radio.radio--inline
+				legend(for="radio") Gender
+				span.form-hint As defined by the witness
+				label.radio.radio--block
+					input(name="radio", type="radio", value="option1")
+					| Female
+				label.radio.radio--block
 					input(name="radio", type="radio", value="option2")
-					| Enter address manually
+					| Male
+				label.radio.radio--block
+					input(checked, name="radio", type="radio", value="option3")
+					| Prefer not to say
+			
+			.form-group-date(style="overflow: auto;")
+				legend Date of birth 
+					span.optional (optional)
+				span.form-hint The witness's date of birth
+				fieldset
+					label(for="dob-day")
+						span.screenreader What is the witness's date of birth? Date field,
+						| Day
+					input#dob-day(max="31", min="1", placeholder="DD", type="number")
+				fieldset
+					label(for="dob-month") Month
+					input#dob-month(max="12", min="1", placeholder="MM", type="number")
+				fieldset
+					label(for="dob-year") Year
+					input#dob-year(max="2100", placeholder="YYYY", type="number")
 
-			//fieldset
-				label(for="field") Enter your postcode
-				.search-results__field.field-group.field-group--buttons
-					input(type="search", placeholder="Enter postcode")
-					button.btn.btn-primary Search&nbsp;&nbsp;
-						i.icon-search
 
-
-			a.btn-light.left-button-icon(href="witness-form-3.html") Back
-			a.btn.right-button-icon(href="witness-form-5.html") Next
+			a.btn-light.left-button-icon(href="witness-form-2.html") Back
+			a.btn.right-button-icon(href="witness-form-4.html") Next
