--- a/libs/jade/witness-form-5.jade
+++ b/libs/jade/witness-form-5.jade
@@ -15,53 +15,54 @@ block breadcrumbs
 block content
 	.articleContent
 		div
-			h2 The trial and the witness’s support needs
-			h3 Defendant details
-			fieldset
-				label(for="standardField") Defendant name(s)
-				span.form-hint For example John SMITH, Jitesh JAMES
-				input(id="standardField" placeholder="" type="text")
+			h2 The witness’s contact details
+			.callout--alert
+				p Please only provide contact information that we can safely use to contact the witness.
 
-			//fieldset
-				label(for="standardField") URN
-				span.form-hint Where this number comes from?
+			fieldset
+				label(for="standardField") Phone number
 				input(id="standardField" placeholder="" type="text")
 
 			fieldset
-				label(for="standardField") Offence(s) 
-					span.optional (optional)
-				input(id="standardField" placeholder="" type="text")
-
-			//fieldset
-				legend(for="radio") Does the case include domestic violence (DV)?
+				legend(for="radio") Is it safe for us to leave a message if the witness doesn’t answer the phone?
+				span.form-hint If unsure leave as 'No'
 				label.radio.radio--inline
-					input(name="radio", type="radio", value="option1")
+					input(name="radio2", type="radio", value="option1")
 					| Yes
 				label.radio.radio--inline
-					input(checked, name="radio", type="radio", value="option2")
+					input(checked, name="radio2", type="radio", value="option2")
 					| No
-
-			h3 Location
+				
 			fieldset
-				label(for="exampleSelect1") Court where the trial will be heard
-				span.form-hint For example Leeds Magistrates’ Court
+				label(for="standardField") Email address
 				input(id="standardField" placeholder="" type="text")
-	
-			.form-group-date(style="overflow: auto;")
-				legend Date of trial 
+
+			fieldset
+				label(for="exampleTextarea") Does the individual have communication needs and contact preferences?
 					span.optional (optional)
-				fieldset
-					label(for="dob-day")
-						span.screenreader What is the witnesses date of birth? Date field,
-						| Day
-					input#dob-day(max="31", min="1", placeholder="DD", type="number")
-				fieldset
-					label(for="dob-month") Month
-					input#dob-month(max="12", min="1", placeholder="MM", type="number")
-				fieldset
-					label(for="dob-year") Year
-					input#dob-year(max="2100", placeholder="YYYY", type="number")
+				span.form-hint  Include the support of an interpreter or other language support (please give their name and role)
+				textarea#exampleTextarea(rows="3")
 
 
-			a.btn-light.left-button-icon(href="witness-form-4.html") Back
-			a.btn.right-button-icon(href="witness-form-6.html") Next
+			//h3 Witness's primary address
+			//fieldset
+				label(for="standardField") Preferred phone number
+				input(id="standardField" placeholder="" type="text")
+			//fieldset
+				label.radio.radio--inline
+					input(checked, name="radio", type="radio", value="option1")
+					| Lookup address
+				label.radio.radio--inline
+					input(name="radio", type="radio", value="option2")
+					| Enter address manually
+
+			//fieldset
+				label(for="field") Enter your postcode
+				.search-results__field.field-group.field-group--buttons
+					input(type="search", placeholder="Enter postcode")
+					button.btn.btn-primary Search&nbsp;&nbsp;
+						i.icon-search
+
+
+			a.btn-light.left-button-icon(href="witness-form-3.html") Back
+			a.btn.right-button-icon(href="witness-form-5.html") Next
