--- a/libs/jade/witness-form-7.jade
+++ b/libs/jade/witness-form-7.jade
@@ -37,8 +37,8 @@ block content
 				textarea#exampleTextarea(rows="3")
 
 
-			a.btn-light.left-button-icon(href="witness-form-7.html") Back
-			a.btn.tick-button-icon(href="witness-form-complete.html") Submit
+			a.btn-light.left-button-icon(href="witness-form-6.html") Back
+			a.btn.tick-button-icon(href="witness-form-8.html") Submit
 
 
 
