--- a/libs/jade/witness-form-8.jade
+++ b/libs/jade/witness-form-8.jade
@@ -54,5 +54,5 @@ block content
 				span.form-hint Include the support of an interpreter or other language support (please give their name and role)
 				textarea#exampleTextarea(rows="3")
 
-			a.btn-light.left-button-icon(href="witness-form-6.html") Back
-			a.btn.right-button-icon(href="witness-form-8.html") Next
+			a.btn-light.left-button-icon(href="witness-form-7.html") Back
+			a.btn.right-button-icon(href="witness-form-complete.html") Next
