Update icons and buttons

--- a/libs/jade/witness-form-7.jade
+++ b/libs/jade/witness-form-7.jade
@@ -38,7 +38,7 @@ block content
 
 
 			a.btn-light.left-button-icon(href="witness-form-6.html") Back
-			a.btn.tick-button-icon(href="witness-form-8.html") Submit
+			a.btn.right-button-icon(href="witness-form-8.html") Next
 
 
 
