--- a/libs/jade/witness-form-8.jade
+++ b/libs/jade/witness-form-8.jade
@@ -55,4 +55,4 @@ block content
 				textarea#exampleTextarea(rows="3")
 
 			a.btn-light.left-button-icon(href="witness-form-7.html") Back
-			a.btn.right-button-icon(href="witness-form-complete.html") Next
+			a.btn.tick-button-icon(href="witness-form-complete.html") Submit
