Update hint text p7

--- a/libs/jade/witness-form-7.jade
+++ b/libs/jade/witness-form-7.jade
@@ -16,24 +16,22 @@ block content
 	.articleContent
 		div
 			h2 Special measures
+			p This includes screens, evidence in chief, Livelink, pre-recorded cross examination, closed court, removal of wigs and gowns, intermediary and aids to communication.
 
 			fieldset
 				label(for="exampleTextarea") Which special measures have been granted? 
 					span.optional (optional)
-				span.form-hint  This includes screens, evidence in chief, Livelink, pre-recorded cross examination, closed court, removal of wigs and gowns, intermediary and aids to communication
 				textarea#exampleTextarea(rows="3")
 
 			fieldset
 				label(for="exampleTextarea") Which special measures have been applied for, but not yet granted? 
 					span.optional (optional)
-				span.form-hint  This includes screens, evidence in chief, Livelink, pre-recorded cross examination, closed court, removal of wigs and gowns, intermediary and aids to communication
 				textarea#exampleTextarea(rows="3")
 
 
 			fieldset
 				label(for="exampleTextarea") Which special measures have been identified, but not applied for? 
 					span.optional (optional)
-				span.form-hint  This includes screens, evidence in chief, Livelink, pre-recorded cross examination, closed court, removal of wigs and gowns, intermediary and aids to communication
 				textarea#exampleTextarea(rows="3")
 
 
