--- a/libs/jade/witness-form-complete.jade
+++ b/libs/jade/witness-form-complete.jade
@@ -17,7 +17,7 @@ block content
 		div
 			h2 Form submitted
 			.callout--confirmation 
-				p Your form has been submitted, our reference number, should you need to contact us is:
+				p Your form has been submitted. Our reference number, if you need to contact us, is:
 				h2 1234567
 				p Would you like a copy of your submission?
 				//button.btn-secondary.email-button-icon(type="button") Email
