Recoded the bottom part of the footer with cleaner html and css

--- a/libs/jade/footer.jade
+++ b/libs/jade/footer.jade
@@ -97,7 +97,7 @@ html.no-js
                 .main-content__right(id="main", role="main")
                     .title
                         h1.title__heading.js-ref
-                            span.title__title 
+                            span.title__title
 
 
            .footer-feedback
@@ -157,20 +157,15 @@ html.no-js
                                     li
                                         a(href="#") Privacy and cookies
 
-            #footer--legal(style="padding:1rem 0rem !important; display:block; width:100%; background-color:#004b88;")
-                .main-footer__box.main-footer__box--copyright.main-content(style="padding:1rem 0rem !important; display:block; width:100%; background-color:#004b88; margin-top:0;margin-bottom:0;")
-                    //div(style="padding:0.5rem 0;") 
-                        p(style="font-size:0.875rem;")
-                            | Accessibility  |  Cymraeg  |  Disclaimer and copyright  |  Privacy and cookies  |  Contact us
+            .footer--legal
+                .footer--legal--content
+                    img(alt="", src="images/ca_wo-logo-100px.svg")
+                    p
+                        | Copyright © 2016 Citizens Advice, an operating name of the National Association of Citizens Advice Bureaux.
+                        br
+                        | Registered charity number 279057; Registered in England 1436945; VAT number GB726020276. 3rd Floor North, 200 Aldersgate, London, EC1A 4HD
 
-                    div
-                        p(style="font-size:0.875rem;color:#fff;")
-                            img(alt="", height="70", src="images/ca_wo-logo-100px.svg", width="70" style="margin-top: -0.5rem;")
-                            | Copyright © 2016 Citizens Advice, an operating name of the National Association of Citizens Advice Bureaux.
-                            br
-                            | Registered charity number 279057; Registered in England 1436945; VAT number GB726020276. 3rd Floor North, 200 Aldersgate, London, EC1A 4HD
-
-        .notice
+        //.notice
             .notice__content
                 p We no longer support Internet Explorer 8. To avoid problems viewing this website, please consider upgrading to #[a.a-external-link(href="https://www.google.co.uk/chrome") Google Chrome].
 
