--- a/libs/site.less
+++ b/libs/site.less
@@ -33,6 +33,7 @@
 
 /* Module files */
 @import "modules/extent-switcher-modal";
+@import "modules/blog";
 @import "modules/header";
 @import "modules/title";
 @import "modules/main-content";
