Tweaking small size footer columns

--- a/libs/jade/footer.jade
+++ b/libs/jade/footer.jade
@@ -110,21 +110,21 @@ html.no-js
                     .flex-column.col-xs-12.col-md-9
                         h3 Get Advice
                         .flex-row(style="padding: 0;")
-                            .col-xs-12.col-md-4
+                            .col-xs-12.col-sm-4
                                 ul
                                     li #[a(href="#") Benefits]
                                     li #[a(href="#") Work]
                                     li #[a(href="#") Debt and money]
                                     li #[a(href="#") Consumer]
 
-                            .col-xs-12.col-md-4
+                            .col-xs-12.col-sm-4
                                 ul
                                     li #[a(href="#") Relationships]
                                     li #[a(href="#") Housing]
                                     li #[a(href="#") Law and rights]
                                     li #[a(href="#") Discrimination]
 
-                            .col-xs-12.col-md-4
+                            .col-xs-12.col-sm-4
                                 ul
                                     li #[a(href="#") Tax]
                                     li #[a(href="#") Healthcare]
