Removed spacing on right of email update form

--- a/libs/template/sidebar-blog.jade
+++ b/libs/template/sidebar-blog.jade
@@ -13,15 +13,15 @@
             ul
                 li
                     a(href="#") Making things simpler: Personal Independence Payment (PIP)
-                li 
+                li
                     a(href="#") Introducing… immigration advice
-                li 
+                li
                     a(href="#") How people look for things
-                li 
+                li
                     a(href="#") Casebook: An intro to what's been happening
-                li 
+                li
                     a(href="#") A present (kind of) from the digital team
-                li 
+                li
                     a(href="#") Your digital team needs you!
 
         .well(style="background-color: #fee4c3; border: 0px #dfdfdf solid;")
@@ -41,10 +41,10 @@
             .card-text
                 fieldset
                     label(for="name", style="color:#fff;") Your name
-                    .search-results__field(style="width:95%; margin-bottom: 10px;")
+                    div(style="margin-bottom: 10px;")
                         input(type="Email", placeholder="Name", style="padding: 0.75rem !important;")
                     label(for="email", style="color:#fff;") Your email
-                    .search-results__field(style="width:95%; margin-bottom: 10px;")
+                    div(style="margin-bottom: 10px;")
                         input(type="Email", placeholder="Email", style="padding: 0.75rem !important;")
                         button.btn.btn-primary.tick-button-icon(style="padding: 1.5rem 0.5rem -1.5rem 0 !important;") Submit
 
