Tidied grid to fix spacing issues

--- a/libs/modules/blog.less
+++ b/libs/modules/blog.less
@@ -37,11 +37,11 @@
 }
 
  .title__subheading--blog {
-	margin-bottom: 2rem;
-	margin-top: .8rem;
+	//margin-bottom: 2rem;
+	//margin-top: .8rem;
 	padding: 1rem 0;
 	background-color: #fff;
-	border-top: #EEEEEE 1px solid;
+	border-bottom: #EEEEEE 1px solid;
 	//border-bottom: #EEEEEE 1px solid;
 	font-size: 0.875rem;
 	line-height: 1.7rem;
@@ -65,7 +65,7 @@
 	&:before {
 		font-family: 'open_sans', 'brand';
 		font-size: .85rem;
-		//content: "\e939\00a0\00a0 ";		
+		//content: "\e939\00a0\00a0 ";
 	}
 }
 
@@ -106,9 +106,9 @@
 	}
 }
 .blog-column-excerpt {
-	padding: 1rem 1em 1rem 0;
-	border-bottom: 1px solid #eee;
-	margin: 0 .5rem;
+	//padding: 1rem 1em 1rem 0;
+	//border-bottom: 1px solid #eee;
+	//margin: 0 .5rem;
 	h2, h3 {
 		margin-top: 0;
 		a {
@@ -160,7 +160,7 @@
 }
 
 
-/** 
+/**
 
 Include updated nav
 
