--- a/libs/modules/blog.less
+++ b/libs/modules/blog.less
@@ -6,23 +6,25 @@
 	padding: 1rem;
 	text-align: center;
 }
-.avatar-full img {
-	border-radius: 50% !important;
-	margin-bottom: .75rem !important;
-	box-shadow: 0 2px 0 0 #eee,0 1px 3px 0 #eee !important;
-	//margin: .5rem !important;
-	width: 100% !important;
+.articleContent .avatar-full img {
+	border-radius: 50%;
+	margin-bottom: .75rem;
+	//box-shadow: 0 2px 0 0 #eee,0 1px 3px 0 #eee;
+	//margin: .5rem;
+	width: 100%;
 	max-width: 200px;
+	border: 2px solid @heritage-yellow;
 }
-.avatar-left img {
-	border-radius: 50% !important;
-	margin: 0 1rem .75rem 0 !important;
-	box-shadow: 0 2px 0 0 #eee,0 1px 3px 0 #eee !important;
-	//margin: .5rem !important;
-	width: 100% !important;
+.articleContent .avatar-left img {
+	border-radius: 50%;
+	margin: 0 1rem .75rem 0;
+	//box-shadow: 0 2px 0 0 #eee,0 1px 3px 0 #eee;
+	//margin: .5rem;
+	width: 100%;
 	max-width: 200px;
 	float: right;
 	clear: left;
+	border: 2px solid @heritage-yellow;
 }
 
 .avatar-title {
