Linked 'team' in top nav

--- a/libs/template/template-blog.jade
+++ b/libs/template/template-blog.jade
@@ -141,7 +141,7 @@ html
 				.styleguide--header--content
 					img(src="images/ca-logo-hz-white-280px.svg")
 					.styleguide--header--content-nav
-						a(href="#") The Team
+						a(href="blog-team.html") The Team
 						a(href="#") About
 						a(href="#") Get involved
 						a(href="#") Jobs
