--- a/libs/modules/blog.less
+++ b/libs/modules/blog.less
@@ -3,17 +3,17 @@
  */
 
 .team {
-	padding: 1rem;
+	//padding: 1rem;
 	text-align: center;
 }
 .articleContent .avatar-full img {
 	border-radius: 50%;
-	margin-bottom: .75rem;
 	//box-shadow: 0 2px 0 0 #eee,0 1px 3px 0 #eee;
 	//margin: .5rem;
 	width: 100%;
 	max-width: 200px;
 	border: 2px solid @heritage-yellow;
+	display: inline-block;
 }
 .articleContent .avatar-left img {
 	border-radius: 50%;
@@ -28,7 +28,9 @@
 }
 
 .avatar-title {
-	text-align: center !important;
+	h3 {
+		margin-bottom: 0;
+	}
 }
 
 .styleguide--header--content-nav a:visited {
