--- a/libs/jade/blog-team.jade
+++ b/libs/jade/blog-team.jade
@@ -9,135 +9,153 @@ extends ../template/template-blog.jade
 
 block breadcrumbs
 	+breadcrumbs([
-		{title: "Home"}])
+		{title: "Home", href: "index.html"},
+		{title: "The Team"}])
 block sidebar
 	include ../template/sidebar-blog.jade
 
 block content
 	.articleContent
-		div
-			h3(style="text-align:center;") Management
-			.row.flex-container
-				.col-xs-12.col-md-3
+		.flex-container
+			h2.col-xs-12 Management
+			.flex-row
+				.col-xs-6.col-sm-4.col-md-3
 					.team
-						.avatar-full
-							img(src="images/sample-blog/avatar.png" alt="That Person")
-						.avatar-title
-							h4 #[a(href="blog-team-profile.html") That Person]
-							p Manager
-				.col-xs-12.col-md-3
+						a(href="blog-team-profile.html")
+							.avatar-full
+								img(src="images/sample-blog/avatar.png" alt="That Person")
+							.avatar-title
+								h3(href="blog-team-profile.html") That Person
+								p Manager
+				.col-xs-6.col-sm-4.col-md-3
 					.team
-						.avatar-full
-							img(src="images/sample-blog/avatar.png" alt="That Person")
-						.avatar-title
-							h4 #[a(href="blog-team-profile.html") That Person]
-							p Manager
-				.col-xs-12.col-md-3
+						a(href="blog-team-profile.html")
+							.avatar-full
+								img(src="images/sample-blog/avatar.png" alt="That Person")
+							.avatar-title
+								h3(href="blog-team-profile.html") That Person
+								p Manager
+				.col-xs-6.col-sm-4.col-md-3
 					.team
-						.avatar-full
-							img(src="images/sample-blog/avatar.png" alt="That Person")
-						.avatar-title
-							h4 #[a(href="blog-team-profile.html") That Person]
-							p Manager
-				.col-xs-12.col-md-3
+						a(href="blog-team-profile.html")
+							.avatar-full
+								img(src="images/sample-blog/avatar.png" alt="That Person")
+							.avatar-title
+								h3(href="blog-team-profile.html") That Person
+								p Manager
+				.col-xs-6.col-sm-4.col-md-3
 					.team
-						.avatar-full
-							img(src="images/sample-blog/avatar.png" alt="That Person")
-						.avatar-title
-							h4 #[a(href="blog-team-profile.html") That Person]
-							p Manager
-			h3(style="text-align:center;") Content
-			.row.flex-container
-				.col-xs-12.col-md-3
+						a(href="blog-team-profile.html")
+							.avatar-full
+								img(src="images/sample-blog/avatar.png" alt="That Person")
+							.avatar-title
+								h3(href="blog-team-profile.html") That Person
+								p Manager
+			h2.col-xs-12 Content
+			.flex-row
+				.col-xs-6.col-sm-4.col-md-3
 					.team
-						.avatar-full
-							img(src="images/sample-blog/avatar.png" alt="That Person")
-						.avatar-title
-							h4 #[a(href="blog-team-profile.html") That Person]
-							p Content Designer
-				.col-xs-12.col-md-3
+						a(href="blog-team-profile.html")
+							.avatar-full
+								img(src="images/sample-blog/avatar.png" alt="That Person")
+							.avatar-title
+								h3(href="blog-team-profile.html") That Person
+								p Content Designer
+				.col-xs-6.col-sm-4.col-md-3
 					.team
-						.avatar-full
-							img(src="images/sample-blog/avatar.png" alt="That Person")
-						.avatar-title
-							h4 #[a(href="blog-team-profile.html") That Person]
-							p Content Designer
-				.col-xs-12.col-md-3
+						a(href="blog-team-profile.html")
+							.avatar-full
+								img(src="images/sample-blog/avatar.png" alt="That Person")
+							.avatar-title
+								h3(href="blog-team-profile.html") That Person
+								p Content Designer
+				.col-xs-6.col-sm-4.col-md-3
 					.team
-						.avatar-full
-							img(src="images/sample-blog/avatar.png" alt="That Person")
-						.avatar-title
-							h4 #[a(href="blog-team-profile.html") That Person]
-							p Content Designer
-				.col-xs-12.col-md-3
+						a(href="blog-team-profile.html")
+							.avatar-full
+								img(src="images/sample-blog/avatar.png" alt="That Person")
+							.avatar-title
+								h3(href="blog-team-profile.html") That Person
+								p Content Designer
+				.col-xs-6.col-sm-4.col-md-3
 					.team
-						.avatar-full
-							img(src="images/sample-blog/avatar.png" alt="That Person")
-						.avatar-title
-							h4 #[a(href="blog-team-profile.html") That Person]
-							p Content Designer
-				.col-xs-12.col-md-3
+						a(href="blog-team-profile.html")
+							.avatar-full
+								img(src="images/sample-blog/avatar.png" alt="That Person")
+							.avatar-title
+								h3(href="blog-team-profile.html") That Person
+								p Content Designer
+				.col-xs-6.col-sm-4.col-md-3
 					.team
-						.avatar-full
-							img(src="images/sample-blog/avatar.png" alt="That Person")
-						.avatar-title
-							h4 #[a(href="blog-team-profile.html") That Person]
-							p Content Designer
-				.col-xs-12.col-md-3
+						a(href="blog-team-profile.html")
+							.avatar-full
+								img(src="images/sample-blog/avatar.png" alt="That Person")
+							.avatar-title
+								h3(href="blog-team-profile.html") That Person
+								p Content Designer
+				.col-xs-6.col-sm-4.col-md-3
 					.team
-						.avatar-full
-							img(src="images/sample-blog/avatar.png" alt="That Person")
-						.avatar-title
-							h4 #[a(href="blog-team-profile.html") That Person]
-							p Content Designer
-				.col-xs-12.col-md-3
+						a(href="blog-team-profile.html")
+							.avatar-full
+								img(src="images/sample-blog/avatar.png" alt="That Person")
+							.avatar-title
+								h3(href="blog-team-profile.html") That Person
+								p Content Designer
+				.col-xs-6.col-sm-4.col-md-3
 					.team
-						.avatar-full
-							img(src="images/sample-blog/avatar.png" alt="That Person")
-						.avatar-title
-							h4 #[a(href="blog-team-profile.html") That Person]
-							p Content Designer
-				.col-xs-12.col-md-3
+						a(href="blog-team-profile.html")
+							.avatar-full
+								img(src="images/sample-blog/avatar.png" alt="That Person")
+							.avatar-title
+								h3(href="blog-team-profile.html") That Person
+								p Content Designer
+				.col-xs-6.col-sm-4.col-md-3
 					.team
-						.avatar-full
-							img(src="images/sample-blog/avatar.png" alt="That Person")
-						.avatar-title
-							h4 #[a(href="blog-team-profile.html") That Person]
-							p Content Designer
-				.col-xs-12.col-md-3
+						a(href="blog-team-profile.html")
+							.avatar-full
+								img(src="images/sample-blog/avatar.png" alt="That Person")
+							.avatar-title
+								h3(href="blog-team-profile.html") That Person
+								p Content Designer
+				.col-xs-6.col-sm-4.col-md-3
 					.team
-						.avatar-full
-							img(src="images/sample-blog/avatar.png" alt="That Person")
-						.avatar-title
-							h4 #[a(href="blog-team-profile.html") That Person]
-							p Content Designer
-				.col-xs-12.col-md-3
+						a(href="blog-team-profile.html")
+							.avatar-full
+								img(src="images/sample-blog/avatar.png" alt="That Person")
+							.avatar-title
+								h3(href="blog-team-profile.html") That Person
+								p Content Designer
+				.col-xs-6.col-sm-4.col-md-3
 					.team
-						.avatar-full
-							img(src="images/sample-blog/avatar.png" alt="That Person")
-						.avatar-title
-							h4 #[a(href="blog-team-profile.html") That Person]
-							p Content Designer
-				.col-xs-12.col-md-3
+						a(href="blog-team-profile.html")
+							.avatar-full
+								img(src="images/sample-blog/avatar.png" alt="That Person")
+							.avatar-title
+								h3(href="blog-team-profile.html") That Person
+								p Content Designer
+				.col-xs-6.col-sm-4.col-md-3
 					.team
-						.avatar-full
-							img(src="images/sample-blog/avatar.png" alt="That Person")
-						.avatar-title
-							h4 #[a(href="blog-team-profile.html") That Person]
-							p Content Designer
-			h3(style="text-align:center;") Design
-			.row.flex-container
-				.col-xs-12.col-md-6
+						a(href="blog-team-profile.html")
+							.avatar-full
+								img(src="images/sample-blog/avatar.png" alt="That Person")
+							.avatar-title
+								h3(href="blog-team-profile.html") That Person
+								p Content Designer
+			h2.col-xs-12 Design
+			.flex-row
+				.col-xs-6.col-sm-4.col-md-3
 					.team
-						.avatar-full
-							img(src="images/sample-blog/avatar.png" alt="That Person")
-						.avatar-title
-							h4 #[a(href="blog-team-profile.html") That Person]
-							p Designer
-				.col-xs-12.col-md-6
+						a(href="blog-team-profile.html")
+							.avatar-full
+								img(src="images/sample-blog/avatar.png" alt="That Person")
+							.avatar-title
+								h3(href="blog-team-profile.html") That Person
+								p Designer
+				.col-xs-6.col-sm-4.col-md-3
 					.team
-						.avatar-full
-							img(src="images/sample-blog/avatar.png" alt="That Person")
-						.avatar-title
-							h4 #[a(href="blog-team-profile.html") That Person]
-							p Designer
+						a(href="blog-team-profile.html")
+							.avatar-full
+								img(src="images/sample-blog/avatar.png" alt="That Person")
+							.avatar-title
+								h3(href="blog-team-profile.html") That Person
+								p Designer
