--- a/libs/jade/blog-team.jade
+++ b/libs/jade/blog-team.jade
@@ -9,7 +9,7 @@ extends ../template/template-blog.jade
 
 block breadcrumbs
 	+breadcrumbs([
-		{title: "Home", href: "index.html"},
+		{title: "Home", href: "blog-home.html"},
 		{title: "The Team"}])
 block sidebar
 	include ../template/sidebar-blog.jade
