--- a/libs/jade/blog-home.jade
+++ b/libs/jade/blog-home.jade
@@ -31,7 +31,7 @@ block content
 					| Research
 				.tag
 					| Content
-				h2 #[a(href="#") Making things simpler: Personal Independence Payment (PIP)]
+				h2 #[a(href="blog-post.html") Making things simpler: Personal Independence Payment (PIP)]
 				p.small #[a(href="#") Stephen Rehill] on January 18, 2016 in #[a(href="#") Content], #[a(href="#") Design]
 				img(src="images/sample-blog/pip-feature-images-2.jpg" alt="PIP feature image" style="width:100%;")
 				p Making a claim for the benefit Personal Independence Payment (PIP) can take a long time time. It can often take up to 4 months from starting the application to getting your money (if you’re #[a(href="#") terminally ill] your claim will be processed more quickly).
@@ -43,7 +43,7 @@ block content
 					| Design
 				.tag
 					| Research
-				h2 #[a(href="#") Introducing… immigration advice]
+				h2 #[a(href="blog-post.html") Introducing… immigration advice]
 				p.small #[a(href="#") Emily Brunwin] on January 1, 2016 in #[a(href="#") Content], #[a(href="#") Immigration]
 				img(src="images/sample-blog/For-blog-post-featured-images.png" alt="Imigration feature image" style="width:100%;")
 				p We’ve pushed the button on some brand new content – immigration advice for the public and advisers. It’s new territory – so why did we take the leap?
