--- a/libs/jade/blog-post.jade
+++ b/libs/jade/blog-post.jade
@@ -9,7 +9,8 @@ extends ../template/template-blog.jade
 
 block breadcrumbs
 	+breadcrumbs([
-		{title: "Home"}])
+		{title: "Home", href: "blog-home.html"},
+		{title: "Working with advisers to design new PIP content"}])
 
 block sidebar
 	include ../template/sidebar-blog.jade
@@ -19,8 +20,8 @@ block content
 		div
 			h1(style="margin-top:0.2rem;") Working with advisers to design new PIP content
 
-			p.small #[a(href="#") Stephen Rehill] on January 18, 2016 in #[a(href="#") Content], #[a(href="#") Design] 
-						
+			p.small #[a(href="#") Stephen Rehill] on January 18, 2016 in #[a(href="#") Content], #[a(href="#") Design]
+
 			block toolbars
 				include ../template/toolbar-blog.jade
 
@@ -28,7 +29,7 @@ block content
 
 			p Working with advisers is an an essential part of our content design process.
 
-			p How we involved advisers 
+			p How we involved advisers
 
 			p Here’s an outline of just some of the ways advisers have been helping us design content for people looking for help to fill out their Personal Independence Payment (PIP) claim form.
 
@@ -57,11 +58,11 @@ block content
 		.well(style="background-color:#fff;")
 			fieldset
 				h2(style="margin-top:.2rem;") Add your comments
-				
+
 				label(for="name") Your name
 				.search-results__field(style="width:100%; margin-bottom: 10px;")
 					input(type="email", placeholder="email", value="Name")
-				
+
 				label(for="email") Your email
 				.search-results__field(style="width:100%;")
 					input(type="email", placeholder="email", value="Email")
