Remove width from search box

--- a/libs/template/sidebar-blog.jade
+++ b/libs/template/sidebar-blog.jade
@@ -3,7 +3,7 @@
         .well(style="background-color: #f2f8ff; border: 0px #dfdfdf solid;")
             fieldset
                 label(for="search") Search this blog
-                .search-results__field.field-group.field-group--buttons(style="width:85%;")
+                .search-results__field.field-group.field-group--buttons
                     input(type="search", placeholder="", value="Search", style="border:1px solid #fff;")
                     button.btn.btn-primary(style="background-color:#fcbb69; border:1px solid #fff;")
                         i.icon-search
