--- a/libs/template/template-blog.jade
+++ b/libs/template/template-blog.jade
@@ -300,7 +300,7 @@ html
 							br
 							| Registered office: Citizens Advice, 3rd Floor North, 200 Aldersgate, London, EC1A 4HD
 
-		.notice
+		//.notice
 			.notice__content
 				p We no longer support Internet Explorer 8. To avoid problems viewing this website, please consider upgrading to #[a.a-external-link(href="#") Google Chrome].
 
